chore: change package.json version to allow release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrcode-camera-decode",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "CLI tool to capture QR code from your camera",
   "main": "./bundled/index.js",
   "bin": "./bundled/cli.js",
